--- a/views/cafetieres.ejs
+++ b/views/cafetieres.ejs
@@ -42,6 +42,21 @@
     <br> <br>
     <h3><strong>Cafetieres</strong></h3>
     <br> <br>
+    <% cafetieres.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
     
 
    <br>
@@ -64,57 +79,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recuperercafetieres')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('cafetieres', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populatecafetieres();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données cafetieres : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populatecafetieres() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const cafetieres = JSON.parse(localStorage.getItem('cafetieres'));
-
-      // Vérifiez si des articles visités existent
-      if (cafetieres && cafetieres.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const cafetieresContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        cafetieres.forEach((cafetieresCardItem) => {
-          const cafetieresDiv = document.createElement('div');
-          cafetieresDiv.classList.add('carte');
-
-          cafetieresDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${cafetieresCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${cafetieresCardItem.nom}</span></br>
-    <span style="color: grey;">${cafetieresCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${cafetieresCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          cafetieresContainer.appendChild(cafetieresDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
