--- a/views/ceintureHPage.ejs
+++ b/views/ceintureHPage.ejs
@@ -43,7 +43,21 @@
     <h3><strong>Ceintures</strong></h3>
     <br> <br>
     
+    <% ceinturesH.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
 
+
+      <% }); %>
    <br>
 
 
@@ -64,57 +78,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererceintureH')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('ceintureH', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateceintureH();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données ceintureH : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateceintureH() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const ceintureH = JSON.parse(localStorage.getItem('ceintureH'));
-
-      // Vérifiez si des articles visités existent
-      if (ceintureH && ceintureH.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const ceintureHContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        ceintureH.forEach((ceintureHCardItem) => {
-          const ceintureHDiv = document.createElement('div');
-          ceintureHDiv.classList.add('carte');
-
-          ceintureHDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${ceintureHCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${ceintureHCardItem.nom}</span></br>
-    <span style="color: grey;">${ceintureHCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${ceintureHCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          ceintureHContainer.appendChild(ceintureHDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
