--- a/views/chapeauPage.ejs
+++ b/views/chapeauPage.ejs
@@ -42,8 +42,21 @@
     <br> <br>
     <h3><strong>Chapeau</strong></h3>
     <br> <br>
-    
+    <% chapeaux.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
 
+
+      <% }); %>
    <br>
 
 
@@ -64,57 +77,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererchapeau')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('chapeau', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populatechapeau();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données chapeau : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populatechapeau() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const chapeau = JSON.parse(localStorage.getItem('chapeau'));
-
-      // Vérifiez si des articles visités existent
-      if (chapeau && chapeau.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const chapeauContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        chapeau.forEach((chapeauCardItem) => {
-          const chapeauDiv = document.createElement('div');
-          chapeauDiv.classList.add('carte');
-
-          chapeauDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${chapeauCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${chapeauCardItem.nom}</span></br>
-    <span style="color: grey;">${chapeauCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${chapeauCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          chapeauContainer.appendChild(chapeauDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
