--- a/views/montresCoPage.ejs
+++ b/views/montresCoPage.ejs
@@ -43,6 +43,22 @@
     <h3><strong>Montres </strong></h3>
     <br> <br>
     
+    <% montresco.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
+
 
    <br>
 
@@ -64,57 +80,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererMontresCo')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('montresCo', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateMontreCo();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données montresCo : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateMontreCo() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const montresCo = JSON.parse(localStorage.getItem('montresCo'));
-
-      // Vérifiez si des articles visités existent
-      if (montresCo && montresCo.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const montresCoContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        montresCo.forEach((montresCoCardItem) => {
-          const montresCoDiv = document.createElement('div');
-          montresCoDiv.classList.add('carte');
-
-          montresCoDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${montresCoCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${montresCoCardItem.nom}</span></br>
-    <span style="color: grey;">${montresCoCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${montresCoCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          montresCoContainer.appendChild(montresCoDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
