--- a/views/montresPage.ejs
+++ b/views/montresPage.ejs
@@ -42,7 +42,21 @@
     <br> <br>
     <h3><strong>Montres </strong></h3>
     <br> <br>
-    
+    <% montres.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -63,58 +77,5 @@
   <script src="/script/index.js"></script>
 
 </body>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererMontresCo')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('montres', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateMontre();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données montres : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateMontre() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const montres = JSON.parse(localStorage.getItem('montres'));
-
-      // Vérifiez si des articles visités existent
-      if (montres && montres.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const montresContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        montres.forEach((montresCardItem) => {
-          const montresDiv = document.createElement('div');
-          montresDiv.classList.add('carte');
-
-          montresDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${montresCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${montresCardItem.nom}</span></br>
-    <span style="color: grey;">${montresCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${montresCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          montresContainer.appendChild(montresDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
