--- a/views/outfitHPage.ejs
+++ b/views/outfitHPage.ejs
@@ -43,6 +43,21 @@
     <h3><strong>Outfit </strong></h3>
     <br> <br>
     
+    <% outfitsH.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,57 +79,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererOutfitH')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('outfitH', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateOutfitH();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données outfitH : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateOutfitH() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const outfitH = JSON.parse(localStorage.getItem('outfitH'));
-
-      // Vérifiez si des articles visités existent
-      if (outfitH && outfitH.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const outfitHContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        outfitH.forEach((outfitHCardItem) => {
-          const outfitHDiv = document.createElement('div');
-          outfitHDiv.classList.add('carte');
-
-          outfitHDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${outfitHCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${outfitHCardItem.nom}</span></br>
-    <span style="color: grey;">${outfitHCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${outfitHCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          outfitHContainer.appendChild(outfitHDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
