--- a/views/samsungPage.ejs
+++ b/views/samsungPage.ejs
@@ -43,6 +43,22 @@
     <h3><strong>Samsung</strong></h3>
     <br> <br>
     
+    <% samsungs.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
+
 
    <br>
 
@@ -64,57 +80,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererSamsung')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('samsung', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateSamsung();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données samsung : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateSamsung() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const samsung = JSON.parse(localStorage.getItem('samsung'));
-
-      // Vérifiez si des articles visités existent
-      if (samsung && samsung.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const samsungContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        samsung.forEach((samsungCardItem) => {
-          const samsungDiv = document.createElement('div');
-          samsungDiv.classList.add('carte');
-
-          samsungDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${samsungCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${samsungCardItem.nom}</span></br>
-    <span style="color: grey;">${samsungCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${samsungCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          samsungContainer.appendChild(samsungDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
