--- a/views/tecnoPage.ejs
+++ b/views/tecnoPage.ejs
@@ -43,6 +43,21 @@
     <h3><strong>Tecno</strong></h3>
     <br> <br>
     
+    <% tecnos.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,56 +79,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererTecno')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('tecno', JSON.stringify(data));
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateTecno();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données tecno : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateTecno() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const tecno = JSON.parse(localStorage.getItem('tecno'));
-
-      // Vérifiez si des articles visités existent
-      if (tecno && tecno.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const tecnoContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        tecno.forEach((tecnoCardItem) => {
-          const tecnoDiv = document.createElement('div');
-          tecnoDiv.classList.add('carte');
-
-          tecnoDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${tecnoCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${tecnoCardItem.nom}</span></br>
-    <span style="color: grey;">${tecnoCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${tecnoCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          tecnoContainer.appendChild(tecnoDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
