--- a/views/chicha.ejs
+++ b/views/chicha.ejs
@@ -42,7 +42,21 @@
     <br> <br>
     <h3><strong>Chicha</strong></h3>
     <br> <br>
-    
+    <% chichas.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,57 +78,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererchicha')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('chicha', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populatechicha();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données chicha : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populatechicha() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const chicha = JSON.parse(localStorage.getItem('chicha'));
-
-      // Vérifiez si des articles visités existent
-      if (chicha && chicha.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const chichaContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        chicha.forEach((chichaCardItem) => {
-          const chichaDiv = document.createElement('div');
-          chichaDiv.classList.add('carte');
-
-          chichaDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${chichaCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${chichaCardItem.nom}</span></br>
-    <span style="color: grey;">${chichaCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${chichaCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          chichaContainer.appendChild(chichaDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
