--- a/views/decoPage.ejs
+++ b/views/decoPage.ejs
@@ -42,7 +42,21 @@
     <br> <br>
     <h3><strong>Decoration</strong></h3>
     <br> <br>
-    
+    <% decos.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,57 +78,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererdeco')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('deco', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populatedeco();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données deco : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populatedeco() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const deco = JSON.parse(localStorage.getItem('deco'));
-
-      // Vérifiez si des articles visités existent
-      if (deco && deco.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const decoContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        deco.forEach((decoCardItem) => {
-          const decoDiv = document.createElement('div');
-          decoDiv.classList.add('carte');
-
-          decoDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${decoCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${decoCardItem.nom}</span></br>
-    <span style="color: grey;">${decoCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${decoCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          decoContainer.appendChild(decoDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
