--- a/views/itelPage.ejs
+++ b/views/itelPage.ejs
@@ -42,7 +42,21 @@
     <br> <br>
     <h3><strong>Itel</strong></h3>
     <br> <br>
-    
+    <% itels.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,56 +78,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererTecno')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('itel', JSON.stringify(data));
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateItel();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données Itel : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateItel() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const itel = JSON.parse(localStorage.getItem('itel'));
-
-      // Vérifiez si des articles visités existent
-      if (itel && itel.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const itelContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        itel.forEach((itelCardItem) => {
-          const itelDiv = document.createElement('div');
-          itelDiv.classList.add('carte');
-
-          itelDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${itelCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${itelCardItem.nom}</span></br>
-    <span style="color: grey;">${itelCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${itelCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          itelContainer.appendChild(itelDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
