--- a/views/macPage.ejs
+++ b/views/macPage.ejs
@@ -43,7 +43,21 @@
     <h3><strong>Macbook</strong></h3>
     <br> <br>
     
+    <% macs.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
 
+
+      <% }); %>
    <br>
 
 
@@ -63,58 +77,5 @@
   <script src="/script/index.js"></script>
 
 </body>
-
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererMac')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('mac', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateMac();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données mac : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateMac() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const mac = JSON.parse(localStorage.getItem('mac'));
-
-      // Vérifiez si des articles visités existent
-      if (mac && mac.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const macContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        mac.forEach((macCardItem) => {
-          const macDiv = document.createElement('div');
-          macDiv.classList.add('carte');
-
-          macDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${macCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${macCardItem.nom}</span></br>
-    <span style="color: grey;">${macCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${macCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          macContainer.appendChild(macDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
