--- a/views/oppoPage.ejs
+++ b/views/oppoPage.ejs
@@ -42,7 +42,21 @@
     <br> <br>
     <h3><strong>Oppo</strong></h3>
     <br> <br>
-    
+    <% oppos.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,57 +78,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererOppo')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('oppo', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateOppo();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données Oppo : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateOppo() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const oppo = JSON.parse(localStorage.getItem('oppo'));
-
-      // Vérifiez si des articles visités existent
-      if (oppo && oppo.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const oppoContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        oppo.forEach((oppoCardItem) => {
-          const oppoDiv = document.createElement('div');
-          oppoDiv.classList.add('carte');
-
-          oppoDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${oppoCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${oppoCardItem.nom}</span></br>
-    <span style="color: grey;">${oppoCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${oppoCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          oppoContainer.appendChild(oppoDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
