--- a/views/puff.ejs
+++ b/views/puff.ejs
@@ -42,7 +42,22 @@
     <br> <br>
     <h3><strong>Puff</strong></h3>
     <br> <br>
-    
+
+    <% puffs.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,57 +79,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererpuff')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('puff', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populatepuff();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données puff : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populatepuff() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const puff = JSON.parse(localStorage.getItem('puff'));
-
-      // Vérifiez si des articles visités existent
-      if (puff && puff.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const puffContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        puff.forEach((puffCardItem) => {
-          const puffDiv = document.createElement('div');
-          puffDiv.classList.add('carte');
-
-          puffDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${puffCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${puffCardItem.nom}</span></br>
-    <span style="color: grey;">${puffCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${puffCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          puffContainer.appendChild(puffDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
