--- a/views/redmiPage.ejs
+++ b/views/redmiPage.ejs
@@ -42,7 +42,22 @@
     <br> <br>
     <h3><strong>Redmi</strong></h3>
     <br> <br>
-    
+    <% redmis.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
+
 
    <br>
 
@@ -67,53 +82,6 @@
 <script>
   document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererRedmi')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('redmi', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateRedmi();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données redmi : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateRedmi() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const redmi = JSON.parse(localStorage.getItem('redmi'));
-
-      // Vérifiez si des articles visités existent
-      if (redmi && redmi.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const redmiContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        redmi.forEach((redmiCardItem) => {
-          const redmiDiv = document.createElement('div');
-          redmiDiv.classList.add('carte');
-
-          redmiDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${redmiCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${redmiCardItem.nom}</span></br>
-    <span style="color: grey;">${redmiCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${redmiCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          redmiContainer.appendChild(redmiDiv);
-        });
-      }
-    }
   })
 </script>
 
