--- a/views/sacFPage.ejs
+++ b/views/sacFPage.ejs
@@ -42,7 +42,22 @@
     <br> <br>
     <h3><strong>Sac</strong></h3>
     <br> <br>
-    
+    <% sacFs.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
+
 
    <br>
 
@@ -64,57 +79,5 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
-
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recuperersacF')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('sacF', JSON.stringify(data));
-        console.log(data);
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populatesacF();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données sacF : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populatesacF() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const sacF = JSON.parse(localStorage.getItem('sacF'));
-
-      // Vérifiez si des articles visités existent
-      if (sacF && sacF.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const sacFContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        sacF.forEach((sacFCardItem) => {
-          const sacFDiv = document.createElement('div');
-          sacFDiv.classList.add('carte');
-
-          sacFDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${sacFCardItem.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${sacFCardItem.nom}</span></br>
-    <span style="color: grey;">${sacFCardItem.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${sacFCardItem.prix} CFA</p>
-    </div>
-      `;
-
-          sacFContainer.appendChild(sacFDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
