--- a/views/telTools.ejs
+++ b/views/telTools.ejs
@@ -43,6 +43,21 @@
     <h3><strong>Accessoires </strong></h3>
     <br> <br>
     
+    <% telTools.forEach((produit) => { %>
+      <div class="carte">
+        <div class="card-top">
+          <img src="<%= produit.url %>" width="100">
+      </div>
+      <div class="card-details">
+      <span style="color: black; font-weight: 500;"><%= produit.nom %></span></br>
+      <span style="color: grey;"><%= produit.info %></span></p>
+      <p style="font-size: 0.8rem; color: gray;">Disponible</p>
+      <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;"><%= produit.prix %> CFA</p>
+      </div>
+      </div>
+
+
+      <% }); %>
 
    <br>
 
@@ -64,56 +79,6 @@
 
 </body>
 
-<script>
-  document.addEventListener('DOMContentLoaded', function() {
 
-    // 1. Récupérez les données depuis le serveur et stockez-les dans le localStorage
-    fetch('/recupererTeltools')
-      .then(response => {
-        if (!response.ok) {
-          throw new Error('La réponse du serveur n\'est pas OK');
-        }
-        return response.json();
-      })
-      .then(data => {
-        localStorage.setItem('teltools', JSON.stringify(data));
-        // 2. Une fois les données récupérées, bouclez dans votre slider
-        populateTeltools();
-      })
-      .catch(error => console.error('Erreur lors de la récupération des données teltools : ' + error));
-
-    // 3. Créez une fonction pour boucler dans le slider
-    function populateTeltools() {
-      // Récupérer les données d'articles visités depuis le localStorage
-      const teltools = JSON.parse(localStorage.getItem('teltools'));
-
-      // Vérifiez si des articles visités existent
-      if (teltools && teltools.length > 0) {
-        // Sélectionnez l'élément parent où vous souhaitez ajouter les articles
-        const tecnoContainer = document.querySelector('.main');
-
-        // Bouclez sur les articles et générez dynamiquement les éléments HTML
-        teltools.forEach((teltools) => {
-          const teltoolsDiv = document.createElement('div');
-          teltoolsDiv.classList.add('carte');
-
-          teltoolsDiv.innerHTML = `
-    <div class="card-top">
-        <img src="${teltools.url}" width="100">
-    </div>
-    <div class="card-details">
-    <span style="color: black; font-weight: 500;">${teltools.nom}</span></br>
-    <span style="color: grey;">${teltools.info}</span></p>
-    <p style="font-size: 0.8rem; color: gray;">Disponible</p>
-    <p style="color: rgb(6, 6, 6);margin-top: 10px; font-weight: 600;">${teltools.prix} CFA</p>
-    </div>
-      `;
-
-          teltoolsContainer.appendChild(teltoolsDiv);
-        });
-      }
-    }
-  })
-</script>
 
 </html>
